# telegram_auth

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
static/CSS/: styles.css
static/JS/: scripts.js
users/: models.py  telegram_handler.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: home.html
